--- a/src/component/Content.css
+++ b/src/component/Content.css
@@ -2,6 +2,7 @@
     margin:0px;
     padding: 0px;
     box-sizing:border-box;
+
  }
  .dynamicData1{
     /* border: 10px solid blue; */
@@ -102,10 +103,10 @@
 }
 .parentD2{
     /* border: 4px solid green; */
-    /* display: flex;
+     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content:start */
+    justify-content:start 
 }
 .Dimgbox2{
     width: 320px;
@@ -114,7 +115,7 @@
     overflow: clip;
 } 
 .Dimg2{
-    width:310px;
+    width:320px;
     height:250px;
     border-radius: 10%;
     padding:2px;
@@ -137,7 +138,7 @@
 
     display: flex;
     align-items:center;
-    justify-content:flex-start;
+    justify-content:flex-start;                   
     margin-top: 2px;
     padding: 4px;
 }
@@ -200,8 +201,7 @@ color:white;
 
 @media screen and (max-width:480px) {
     .back{
-        position: fixed;
-        left:5px;
+        display: none;
     }
     .dynamicData1{
         display: flex;
@@ -357,8 +357,7 @@ color:white;
 }
 @media screen and (min-width:481px) and (max-width:768px) {
     .back{
-        position: fixed;
-        left:5px;
+        display:block;
     }
     .dynamicData1{
         display: flex;
@@ -443,12 +442,10 @@ color:white;
     .dynamicData2{
         width:100%;
         display: flex;
-        flex-direction: column;
+        flex-direction:row;
         align-items: center;
         justify-content:space-between;
-        margin:0.5em;
-        /* z-index:3; */
-    } 
+    }
     .Dimgbox2{
         width:100%;
         height:20%;
@@ -463,20 +460,7 @@ color:white;
     .parentD2{
         width: 100%;
         margin-bottom: 2%;
-
-    }
-    /* .Dimgbox2{
-        width:100%;
-        height:250px;
-         border:3px solid red; 
-    } 
-    .Dimg2{
-        width:100%;
-        height:100%;
-        border-radius: 10%;
-        padding:2px;
-     border: 5px solid black; 
-    }  */
+    }  
     .Dhea2{
         text-align: center;
         width:100%;
@@ -493,18 +477,7 @@ color:white;
         justify-content:flex-start;
         margin-top: 2px;
         padding: 4px;
-    }
-    /* .dynamicData2{
-        border: 10px solid blue;
-        width:100%;
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content:space-between;
-        /* z-index:3; 
-    }  
-*/
-   
+    }   
+}
 
     
-}
